feat(runner): executing entire app as separate processes
- added a new module 'runner' responsible for starting client & server as separate processes
- in client module added classes with 'main' methods to execute various types of requests for the server