@@ -12,6 +12,7 @@
         <module>server</module>
         <module>client</module>
         <module>api</module>
+        <module>runner</module>
     </modules>
 
     <properties>
@@ -56,6 +57,13 @@
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
